fix scrollbar

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,16 +4,36 @@
 	display: none;
     }
 
-    body::-webkit-scrollbar {
+    /* body::-webkit-scrollbar {
         width: 10px;
     }
 
     body::-webkit-scrollbar-track {
         background-color: darkgray;
     }
-
+    
     body::-webkit-scrollbar-thumb {
         box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    } */
+
+    body::-webkit-scrollbar,
+    .slider-small::-webkit-scrollbar,
+    #partners::-webkit-scrollbar {
+        height: 10px;
+        width: 10px;
+    }
+
+    body::-webkit-scrollbar-track,
+    .slider-small::-webkit-scrollbar-track,
+    #partners::-webkit-scrollbar-track {
+        background-color: #19435a;
+    }
+
+    body::-webkit-scrollbar-thumb,
+    .slider-small::-webkit-scrollbar-thumb,
+    #partners::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 20px 10px rgb(227 32 104);
+        border-radius: 40px;    
     }
 
 
